--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,8 @@
   <br>
   <fieldset style="width:300px">
     <legend>Con evento change:</legend>
-    <input type="radio" name="radioejemplo" value="mostrar" (change)="mostrar=true"/>Mostrar<br>
-    <input type="radio" name="radioejemplo" value="ocultar" (change)="mostrar=false"/>Ocultar<br>
+    <input type="radio" name="ejemplo1" (change)="mostrar=true"/>Mostrar<br>
+    <input type="radio" name="ejemplo1" (change)="mostrar=false"/>Ocultar<br>
   </fieldset>
   <br>
     <fieldset style="width:300px">
@@ -21,3 +21,8 @@
       <input type="radio" name="radioejemplo" [(ngModel)]="mostrar" value="true" />Mostrar<br>
       <input type="radio" name="radioejemplo" [(ngModel)]="mostrar" value="false" />Ocultar<br>
     </fieldset>
+    <br><br>
+    <!--<input type="button" (click)="dato=dato+1" value="Incremetador"><br>-->
+    <input type="button" (mouseover)="dato=dato+1" value="Incremetador"><br>
+    <p>{{dato}}</p><br>
+    <img [src]="ruta" [ngStyle]="{'top.px':dato}" style="position:absolute;width: 80px"><!-- cuando uso el ngStyle se llama a las propiedades seguidas despues del punto del tipo de variable voy a usar, en este caso pixeles (px)-->
